Trying to fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1.section
     border: black solid .167em;
     margin-left: auto;
     margin-right: auto;
-    display: inline-block;
+    display: block;
 }
 h2.about
 {
@@ -104,7 +104,7 @@ h2.about
     border: black solid .167em;
     margin-left: auto;
     margin-right: auto;
-    display: inline-block;
+    display: block;
 }
 h2.locationtime
 {
@@ -132,7 +132,7 @@ h3.owl
     border: black solid .167em;
     margin-left: auto;
     margin-right: auto;
-    display: inline-block;
+    display: block;
 }
 img.self
 {
@@ -140,7 +140,7 @@ img.self
     height: 30%;
     border-radius: 1em;
     border: solid black 2px;
-    display: inline-block;
+    display: block;
 }
 img.scarhawk
 {
